--- a/work/02_起步/01_helloVue.html
+++ b/work/02_起步/01_helloVue.html
@@ -18,12 +18,17 @@
   注意: 需要在webstorm中安装vue.js插件
 -->
 <div id="demo">
-  <input type="text" v-model="">
-  <p>{{}}</p>
+  <input type="text" v-model="msg">
+  <p>{{msg}}</p>
 </div>
-<script type="text/javascript" src="../js/"></script>
+<script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
-
+new Vue({
+  el:'#demo',
+  data:{
+    msg:'atguigu'
+  }
+})
 </script>
 </body>
 </html>
