--- a/work/02_起步/02_列表.html
+++ b/work/02_起步/02_列表.html
@@ -25,6 +25,9 @@
             {id : 3, name : '打豆豆'}
           ]
 -->
-
+<script type="text/javascript" src="../js/vue.js"></script>
+<script type="text/javascript">
+    
+</script>
 </body>
 </html>
