--- a/work/07_列表渲染/09_列表渲染.html
+++ b/work/07_列表渲染/09_列表渲染.html
@@ -16,12 +16,35 @@
 <div id="demo">
 
   <h2>测试: v-for 遍历数组</h2>
-
+    <ul>
+      <li v-for="p in persons">
+       {{$index}}---{{p.name}}--{{p.age}}
+        ---<button @click="test($index)">删除</button>
+        ---<button>删除</button>
+      </li>
+    </ul>
   <h2>测试: v-for 遍历对象</h2>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  new Vue({
+    el:'#demo',
+    data:{
+      persons:[
+        {name:'tom', age:15},
+        {name:'bob', age:16},
+        {name:'jack', age:17}
+      ]
+    },
+    methods:{
+      test(index){
+          if(confirm('确定要删除吗？')){
+              this.persons.splice(index,1)
+          }
+      }
+    }
+  })
 </script>
 </body>
 </html>
